Fix: temporarily commented parts of vertical stretcher that applies height - to test playtech ui bug

--- a/src/components/GamePage/GamePage.scss
+++ b/src/components/GamePage/GamePage.scss
@@ -7,6 +7,10 @@ $directions: (top, left, bottom, right);
   }
 }
 
+.u-height-full-vh {
+  height: 100vh;
+}
+
 .c-game-page {
   --game-page-sidebar-width-desktop: 290px;
   background-position: center;
